TAG: mgidbmigration-6-0-16-10
DATE: 03/04/2021
STAFF: lec
CHANGES:
TR13472/run complexes.tsv go_propery additions for every load

TAG: mgidbmigration-6-0-16-9
TAG: mgidbmigration-6-0-16-8
DATE: 02/25/2021, 03/02/2021
STAFF: lec
CHANGES:
TR13272/GO meeting/CalTech/tasks to-do
add go_cam.csh

TAG: mgidbmigration-6-0-16-7
DATE: 02/19/2021
STAFF: lec
CHANGES:
TR13272/GO meeting/CalTech/tasks to-do

TAG: mgidbmigration-6-0-16-6
DATE: 10/06/2020
STAFF: lec
CHANGES:
TR13404/PWI:Allele problems (SOO and Strain review flag)

TAG: mgidbmigration-6-0-16-5
TAG: mgidbmigration-6-0-16-4
DATE: 09/14/2020
STAFF: lec
CHANGES: TR12571/MP.config/change _notetype_key = 1000

TAG: mgidbmigration-6-0-16-3
TAG: mgidbmigration-6-0-16-2
TAG: mgidbmigration-6-0-16-1
DATE: 08/25/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: mgidbmigration-6-0-15-15
TAG: mgidbmigration-6-0-15-14
TAG: mgidbmigration-6-0-15-13
DATE: 07/01/2020
STAFF: lec
TR13204/infastructure/gxd default age

TAG: mgidbmigration-6-0-15-12
TAG: mgidbmigration-6-0-15-11
DATE: 04/27/2020
STAFF: lec
TR13272/GO meeting/CalTech/tasks to-do/Inferred From

TAG: mgidbmigration-6-0-15-10
TAG: mgidbmigration-6-0-15-9
??

TAG: mgidbmigration-6-0-15-8
TAG: mgidbmigration-6-0-15-7
TAG: mgidbmigration-6-0-15-6
TAG: mgidbmigration-6-0-15-5
TAG: mgidbmigration-6-0-15-4
TAG: mgidbmigration-6-0-15-3
DATE: 01/02/2020
STAFF: sc
TR13206 migrate allele molecular notes

TAG: mgidbmigration-6-0-15-2
TAG: mgidbmigration-6-0-15-1
DATE: 12/02/2019
STAFF: lec
TR13007/RNA Sequence project

TAG: mgidbmigration-6-0-14-16
TAG: mgidbmigration-6-0-14-15
DATE: 10/25/2019
STAFF: sc
TR13183 - GO data cleanup

TAG: mgidbmigration-6-0-14-14
TAG: mgidbmigration-6-0-14-13
TAG: mgidbmigration-6-0-14-12
TAG: mgidbmigration-6-0-14-11
TAG: mgidbmigration-6-0-14-10
TAG: mgidbmigration-6-0-14-9
TAG: mgidbmigration-6-0-14-8
TAG: mgidbmigration-6-0-14-7
TAG: mgidbmigration-6-0-14-6
TAG: mgidbmigration-6-0-14-5
TAG: mgidbmigration-6-0-14-4
TAG: mgidbmigration-6-0-14-3